openapi: final v1 definition
